[ci skip] New Crowdin translations (#3383)

--- a/apps/builder/src/i18n/locale/cs-CZ.json
+++ b/apps/builder/src/i18n/locale/cs-CZ.json
@@ -3730,7 +3730,37 @@
   "drive": {
     "message": {
       "start_upload": "Spustit nahrávání",
-      "start_download": "Zahájit stahování"
+      "start_download": "Zahájit stahování",
+      "create_suc": "Úspěšně vytvořeno",
+      "create_failed": "Vytvoření se nezdařilo",
+      "generate_url_fail": "Generování URL se nezdařilo. Vyberte soubor ručně. "
+    },
+    "create_modal": {
+      "title": {
+        "create_a_folder": "Vytvořit složku",
+        "create": "Vytvořit",
+        "cancel": "Zrušit"
+      },
+      "validate": "Jsou povolena pouze písmena, číslice a -~_=. Limit je 255 znaků nebo méně",
+      "validate_failed": "Jsou povolena pouze písmena, číslice a -~_=. Limit je 255 znaků nebo méně"
+    },
+    "move_modal": {
+      "no_folders": "Žádné soubory zde"
+    },
+    "same_name_modal": {
+      "this_folder_already": "Soubor se stejným názvem již v této složce existuje nebo se do této složky nahrává. Chcete jej nahradit?",
+      "keep_both": "Zachovat obojí",
+      "replace": "Nahradit"
+    },
+    "upload": {
+      "modal": {
+        "title": "Vyberte složku k nahrání",
+        "upload_to": "Nahrát do",
+        "all": "Root",
+        "create_folder": "Vytvořit novou složku",
+        "cancel": "Zrušit",
+        "file_upload": "Nahrát"
+      }
     }
   },
   "frame": {
@@ -4453,12 +4483,8 @@
     "default-text": {
       "social-media": {
         "reddit": "Podívejte se na tento úžasný AI agenta [{{promptName}}]",
-        "linkedin": "Pozorujte všechny nadšence AI a profesionály usilující o zvýšení jejich produktivity! Navštívil jsem platformu AI agenta, která nabízí špičková řešení pro zjednodušení složitých úkolů a integraci s vašimi vnitřními nástroji. Osobně jsem vyzkoušel [{{promptName}}] a byl jsem vyhozen svými schopnostmi. Je to herní výměník pro každého, kdo chce zůstat před křivkou. Podívejte se na sebe v {{promptLink}} a dejte mi vědět, co si myslíte!",
-        "facebook": "Pozorujte všechny nadšence AI a profesionály usilující o zvýšení jejich produktivity! Navštívil jsem platformu AI agenta, která nabízí špičková řešení pro zjednodušení složitých úkolů a integraci s vašimi vnitřními nástroji. Osobně jsem vyzkoušel [{{promptName}}] a byl jsem vyhozen svými schopnostmi. Je to herní výměník pro každého, kdo chce zůstat před křivkou. Podívejte se na sebe v {{promptLink}} a dejte mi vědět, co si myslíte!",
-        "whatsapp": "Navštívil jsem platformu AI agenta, která nabízí špičková řešení pro zjednodušení složitých úkolů a integraci s vašimi vnitřními nástroji. Osobně jsem vyzkoušel [{{promptName}}] a byl jsem vyhozen svými schopnostmi. Je to herní výměník pro každého, kdo chce zůstat před křivkou. Podívejte se na sebe v {{promptLink}} a dejte mi vědět, co si myslíte!",
         "hackernews": "Zjednodušit pracovní zatížení pomocí [{{promptName}}] - AI agenta, který práci dokončil"
-      },
-      "contribute": "Navštívil jsem platformu AI agenta, která nabízí špičková řešení pro zjednodušení složitých úkolů a integraci s vašimi vnitřními nástroji. Osobně jsem vyzkoušel [{{promptName}}] a byl jsem vyhozen svými schopnostmi. Je to herní výměník pro každého, kdo chce zůstat před křivkou. Podívejte se na sebe v {{promptLink}} a dejte mi vědět, co si myslíte!"
+      }
     },
     "button": {
       "share_contribute": "Kopírovat a sdílet",
