--- a/apps/builder/src/i18n/locale/ro-RO.json
+++ b/apps/builder/src/i18n/locale/ro-RO.json
@@ -3730,7 +3730,37 @@
   "drive": {
     "message": {
       "start_upload": "Începe încărcarea",
-      "start_download": "Începe descărcarea"
+      "start_download": "Începe descărcarea",
+      "create_suc": "Creat cu succes",
+      "create_failed": "Crearea a eșuat",
+      "generate_url_fail": "Esuare generare URL. Te rugam sa selectezi fisierul manual. "
+    },
+    "create_modal": {
+      "title": {
+        "create_a_folder": "Creează un dosar",
+        "create": "Crează",
+        "cancel": "Anulează"
+      },
+      "validate": "Doar litere, numere și -~_=: sunt permise. Limita este de 255 de caractere sau mai puțin",
+      "validate_failed": "Doar litere, numere și -~_=: sunt permise. Limita este de 255 de caractere sau mai puțin"
+    },
+    "move_modal": {
+      "no_folders": "Niciun fișier aici"
+    },
+    "same_name_modal": {
+      "this_folder_already": "Fişierul cu acelaşi nume există deja în acest dosar sau este încărcat în acest dosar. Doriţi să-l înlocuiţi?",
+      "keep_both": "Păstrați ambele",
+      "replace": "Înlocuiește"
+    },
+    "upload": {
+      "modal": {
+        "title": "Selectați un folder pentru a încărca la",
+        "upload_to": "Încărcaţi la",
+        "all": "Rădăcină",
+        "create_folder": "Creați un dosar nou",
+        "cancel": "Anulează",
+        "file_upload": "Incarca"
+      }
     }
   },
   "frame": {
@@ -4453,12 +4483,8 @@
     "default-text": {
       "social-media": {
         "reddit": "Uită-te la acest uimitor Agent AI [{{promptName}}]",
-        "linkedin": "Atenţie pentru toţi entuziaştii şi profesioniştii din domeniul AI care doresc să-şi crească productivitatea! Am întâlnit o platformă AI Agent care oferă soluții de vârf pentru simplificarea sarcinilor complexe și integrarea cu instrumentele tale interne. Am încercat personal [{{promptName}}] și am fost uimit de capabilitățile sale. Este o schimbare de joc pentru oricine care doreşte să rămână înaintea curbei. Uită-te pentru tine la {{promptLink}} și spune-mi ce crezi!",
-        "facebook": "Atenţie pentru toţi entuziaştii şi profesioniştii din domeniul AI care doresc să-şi crească productivitatea! Am întâlnit o platformă AI Agent care oferă soluții de vârf pentru simplificarea sarcinilor complexe și integrarea cu instrumentele tale interne. Am încercat personal [{{promptName}}] și am fost uimit de capabilitățile sale. Este o schimbare de joc pentru oricine care doreşte să rămână înaintea curbei. Uită-te pentru tine la {{promptLink}} și spune-mi ce crezi!",
-        "whatsapp": "Am întâlnit o platformă AI Agent care oferă soluții de vârf pentru simplificarea sarcinilor complexe și integrarea cu instrumentele tale interne. Am încercat personal [{{promptName}}] și am fost uimit de capabilitățile sale. Este o schimbare de joc pentru oricine care doreşte să rămână înaintea curbei. Uită-te pentru tine la {{promptLink}} și spune-mi ce crezi!",
         "hackernews": "Simplifică-ți volumul de lucru cu [{{promptName}}] - Agentul AI care câștigă slujba"
-      },
-      "contribute": "Am întâlnit o platformă AI Agent care oferă soluții de vârf pentru simplificarea sarcinilor complexe și integrarea cu instrumentele tale interne. Am încercat personal [{{promptName}}] și am fost uimit de capabilitățile sale. Este o schimbare de joc pentru oricine care doreşte să rămână înaintea curbei. Uită-te pentru tine la {{promptLink}} și spune-mi ce crezi!"
+      }
     },
     "button": {
       "share_contribute": "Copiază & Partajează",
