--- a/apps/builder/src/i18n/locale/ru-RU.json
+++ b/apps/builder/src/i18n/locale/ru-RU.json
@@ -3730,7 +3730,37 @@
   "drive": {
     "message": {
       "start_upload": "Начать загрузку",
-      "start_download": "Начать загрузку"
+      "start_download": "Начать загрузку",
+      "create_suc": "Успешно создано",
+      "create_failed": "Не удалось создать",
+      "generate_url_fail": "Не удалось сгенерировать URL. Пожалуйста, выберите файл вручную. "
+    },
+    "create_modal": {
+      "title": {
+        "create_a_folder": "Создать папку",
+        "create": "Создать",
+        "cancel": "Отмена"
+      },
+      "validate": "Допускаются только буквы, цифры и -~_=. Лимит составляет 255 символов или меньше",
+      "validate_failed": "Допускаются только буквы, цифры и -~_=. Лимит составляет 255 символов или меньше"
+    },
+    "move_modal": {
+      "no_folders": "Нет файлов"
+    },
+    "same_name_modal": {
+      "this_folder_already": "Файл с таким именем уже существует в этой папке или загружается в эту папку. Заменить его?",
+      "keep_both": "Оставить оба",
+      "replace": "Заменить"
+    },
+    "upload": {
+      "modal": {
+        "title": "Выберите папку для загрузки",
+        "upload_to": "Загрузить в",
+        "all": "Корень",
+        "create_folder": "Создать новую папку",
+        "cancel": "Отмена",
+        "file_upload": "Выгрузить"
+      }
     }
   },
   "frame": {
@@ -4453,12 +4483,8 @@
     "default-text": {
       "social-media": {
         "reddit": "Посмотрите этот удивительный ИИ Агент [{{promptName}}]",
-        "linkedin": "Внимание всех энтузиастов и профессионалов, желающих повысить свою производительность! Я столкнулся с платформой AI Agent, предлагающей передовые решения для упрощения сложных задач и интеграции с вашими внутренними инструментами. Я лично попробовал [{{promptName}}] и был взорван его возможностями. Это изменение для любого желающего быть впереди кривой. Посмотрите на себя на {{promptLink}} и дайте мне знать, что вы думаете!",
-        "facebook": "Внимание всех энтузиастов и профессионалов, желающих повысить свою производительность! Я столкнулся с платформой AI Agent, предлагающей передовые решения для упрощения сложных задач и интеграции с вашими внутренними инструментами. Я лично попробовал [{{promptName}}] и был взорван его возможностями. Это изменение для любого желающего быть впереди кривой. Посмотрите на себя на {{promptLink}} и дайте мне знать, что вы думаете!",
-        "whatsapp": "Я столкнулся с платформой AI Agent, предлагающей передовые решения для упрощения сложных задач и интеграции с вашими внутренними инструментами. Я лично попробовал [{{promptName}}] и был взорван его возможностями. Это изменение для любого желающего быть впереди кривой. Посмотрите на себя на {{promptLink}} и дайте мне знать, что вы думаете!",
         "hackernews": "Упростите вашу рабочую нагрузку с [{{promptName}}] - Агент ИИ, который получает выполненную работу"
-      },
-      "contribute": "Я столкнулся с платформой AI Agent, предлагающей передовые решения для упрощения сложных задач и интеграции с вашими внутренними инструментами. Я лично попробовал [{{promptName}}] и был взорван его возможностями. Это изменение для любого желающего быть впереди кривой. Посмотрите на себя на {{promptLink}} и дайте мне знать, что вы думаете!"
+      }
     },
     "button": {
       "share_contribute": "Копировать и поделиться",
