--- a/apps/builder/src/i18n/locale/el-GR.json
+++ b/apps/builder/src/i18n/locale/el-GR.json
@@ -3730,7 +3730,37 @@
   "drive": {
     "message": {
       "start_upload": "Έναρξη μεταφόρτωσης",
-      "start_download": "Έναρξη λήψης"
+      "start_download": "Έναρξη λήψης",
+      "create_suc": "Δημιουργήθηκε με επιτυχία",
+      "create_failed": "Αποτυχία δημιουργίας",
+      "generate_url_fail": "Απέτυχε η δημιουργία του URL. Παρακαλώ επιλέξτε το αρχείο χειροκίνητα. "
+    },
+    "create_modal": {
+      "title": {
+        "create_a_folder": "Δημιουργία φακέλου",
+        "create": "Δημιουργία",
+        "cancel": "Ακύρωση"
+      },
+      "validate": "Γράμματα, αριθμοί και -~_=: επιτρέπονται",
+      "validate_failed": "Επιτρέπονται μόνο γράμματα, αριθμοί και -~_=. Το όριο είναι 255 χαρακτήρες ή λιγότερο"
+    },
+    "move_modal": {
+      "no_folders": "Δεν υπάρχουν αρχεία εδώ"
+    },
+    "same_name_modal": {
+      "this_folder_already": "Το αρχείο με το ίδιο όνομα υπάρχει ήδη σε αυτόν το φάκελο ή αποστέλλεται σε αυτόν το φάκελο. Θα θέλατε να το αντικαταστήσετε?",
+      "keep_both": "Κρατήστε και τα δύο",
+      "replace": "Αντικατάσταση"
+    },
+    "upload": {
+      "modal": {
+        "title": "Επιλέξτε ένα φάκελο για μεταφόρτωση",
+        "upload_to": "Ανέβασμα σε",
+        "all": "Ρίζα",
+        "create_folder": "Δημιουργία νέου φακέλου",
+        "cancel": "Ακύρωση",
+        "file_upload": "Ανέβασμα"
+      }
     }
   },
   "frame": {
@@ -4453,12 +4483,8 @@
     "default-text": {
       "social-media": {
         "reddit": "Δείτε αυτό το καταπληκτικό AI Agent [{{promptName}}]",
-        "linkedin": "Προσοχή σε όλους τους λάτρεις της τεχνητής νοημοσύνης και τους επαγγελματίες που επιθυμούν να αυξήσουν την παραγωγικότητά τους! Ήρθα σε μια πλατφόρμα AI Agent που προσφέρει λύσεις αιχμής για την απλοποίηση σύνθετων εργασιών και την ενσωμάτωση με τα εσωτερικά εργαλεία σας. Εγώ προσωπικά δοκίμασα [{{promptName}}] και εκτοξεύθηκα από τις δυνατότητές της. Είναι ένα παιχνίδι-changer για όποιον θέλει να μείνει μπροστά από την καμπύλη. Ελέγξτε το για τον εαυτό σας στο {{promptLink}} και ενημερώστε με τι σκέφτεστε!",
-        "facebook": "Προσοχή σε όλους τους λάτρεις της τεχνητής νοημοσύνης και τους επαγγελματίες που επιθυμούν να αυξήσουν την παραγωγικότητά τους! Ήρθα σε μια πλατφόρμα AI Agent που προσφέρει λύσεις αιχμής για την απλοποίηση σύνθετων εργασιών και την ενσωμάτωση με τα εσωτερικά εργαλεία σας. Εγώ προσωπικά δοκίμασα [{{promptName}}] και εκτοξεύθηκα από τις δυνατότητές της. Είναι ένα παιχνίδι-changer για όποιον θέλει να μείνει μπροστά από την καμπύλη. Ελέγξτε το για τον εαυτό σας στο {{promptLink}} και ενημερώστε με τι σκέφτεστε!",
-        "whatsapp": "Ήρθα σε μια πλατφόρμα AI Agent που προσφέρει λύσεις αιχμής για την απλοποίηση σύνθετων εργασιών και την ενσωμάτωση με τα εσωτερικά εργαλεία σας. Εγώ προσωπικά δοκίμασα [{{promptName}}] και εκτοξεύθηκα από τις δυνατότητές της. Είναι ένα παιχνίδι-changer για όποιον θέλει να μείνει μπροστά από την καμπύλη. Ελέγξτε το για τον εαυτό σας στο {{promptLink}} και ενημερώστε με τι σκέφτεστε!",
         "hackernews": "Απλοποιήστε το φόρτο εργασίας σας με [{{promptName}}] - Ο πράκτορας τεχνητής νοημοσύνης που παίρνει την εργασία Έγινε"
-      },
-      "contribute": "Ήρθα σε μια πλατφόρμα AI Agent που προσφέρει λύσεις αιχμής για την απλοποίηση σύνθετων εργασιών και την ενσωμάτωση με τα εσωτερικά εργαλεία σας. Εγώ προσωπικά δοκίμασα [{{promptName}}] και εκτοξεύθηκα από τις δυνατότητές της. Είναι ένα παιχνίδι-changer για όποιον θέλει να μείνει μπροστά από την καμπύλη. Ελέγξτε το για τον εαυτό σας στο {{promptLink}} και ενημερώστε με τι σκέφτεστε!"
+      }
     },
     "button": {
       "share_contribute": "Αντιγραφή & Κοινοποίηση",
