--- a/apps/builder/src/i18n/locale/ja-JP.json
+++ b/apps/builder/src/i18n/locale/ja-JP.json
@@ -3730,7 +3730,37 @@
   "drive": {
     "message": {
       "start_upload": "アップロードを開始",
-      "start_download": "ダウンロードを開始"
+      "start_download": "ダウンロードを開始",
+      "create_suc": "作成に成功しました",
+      "create_failed": "作成に失敗しました",
+      "generate_url_fail": "URLの生成に失敗しました。手動でファイルを選択してください。 "
+    },
+    "create_modal": {
+      "title": {
+        "create_a_folder": "フォルダを作成",
+        "create": "作成",
+        "cancel": "キャンセル"
+      },
+      "validate": "文字、数字、-~_=: は使用できます",
+      "validate_failed": "文字、数字、-~_= : のみが使用できます。制限は 255 文字以下です。"
+    },
+    "move_modal": {
+      "no_folders": "ここにファイルはありません"
+    },
+    "same_name_modal": {
+      "this_folder_already": "同じ名前のファイルが既にこのフォルダに存在するか、このフォルダにアップロードされています。置き換えますか？",
+      "keep_both": "両方を保持",
+      "replace": "置換"
+    },
+    "upload": {
+      "modal": {
+        "title": "アップロードするフォルダを選択",
+        "upload_to": "アップロード先:",
+        "all": "ルート",
+        "create_folder": "新しいフォルダを作成",
+        "cancel": "キャンセル",
+        "file_upload": "アップロード"
+      }
     }
   },
   "frame": {
@@ -4453,12 +4483,8 @@
     "default-text": {
       "social-media": {
         "reddit": "この AI エージェント [{{promptName}} ] をチェックしてください。",
-        "linkedin": "Attention all AI enthusiasts and professionals looking to increase their productivity! I came across an AI Agent platform that offers cutting-edge solutions for simplifying complex tasks and integrating with your internal tools. I personally tried out [{{promptName}}] and was blown away by its capabilities. It's a game-changer for anyone looking to stay ahead of the curve. Check it out for yourself at {{promptLink}} and let me know what you think!",
-        "facebook": "Attention all AI enthusiasts and professionals looking to increase their productivity! I came across an AI Agent platform that offers cutting-edge solutions for simplifying complex tasks and integrating with your internal tools. I personally tried out [{{promptName}}] and was blown away by its capabilities. It's a game-changer for anyone looking to stay ahead of the curve. Check it out for yourself at {{promptLink}} and let me know what you think!",
-        "whatsapp": "I came across an AI Agent platform that offers cutting-edge solutions for simplifying complex tasks and integrating with your internal tools. I personally tried out [{{promptName}}] and was blown away by its capabilities. It's a game-changer for anyone looking to stay ahead of the curve. Check it out for yourself at {{promptLink}} and let me know what you think!",
         "hackernews": "[{{promptName}}] で作業負荷を簡素化する - 作業を完了させるAIエージェント"
-      },
-      "contribute": "I came across an AI Agent platform that offers cutting-edge solutions for simplifying complex tasks and integrating with your internal tools. I personally tried out [{{promptName}}] and was blown away by its capabilities. It's a game-changer for anyone looking to stay ahead of the curve. Check it out for yourself at {{promptLink}} and let me know what you think!"
+      }
     },
     "button": {
       "share_contribute": "コピー & 共有",
