--- a/apps/builder/src/i18n/locale/no-NO.json
+++ b/apps/builder/src/i18n/locale/no-NO.json
@@ -3730,7 +3730,37 @@
   "drive": {
     "message": {
       "start_upload": "Start opplasting",
-      "start_download": "Start nedlasting"
+      "start_download": "Start nedlasting",
+      "create_suc": "Opprettet",
+      "create_failed": "Kunne ikke opprette",
+      "generate_url_fail": "Mislyktes i å generere URL-en. Velg filen manuelt. "
+    },
+    "create_modal": {
+      "title": {
+        "create_a_folder": "Opprett en mappe",
+        "create": "Opprett",
+        "cancel": "Avbryt"
+      },
+      "validate": "Kun bokstaver, tall og -~_=: er tillatt. Grensen er 255 tegn, eller mindre",
+      "validate_failed": "Kun bokstaver, tall og -~_=: er tillatt. Grensen er 255 tegn, eller mindre"
+    },
+    "move_modal": {
+      "no_folders": "Ingen filer her"
+    },
+    "same_name_modal": {
+      "this_folder_already": "Filen med samme navn finnes allerede i denne mappen, eller den lastes opp til denne mappen. Vil du erstatte den?",
+      "keep_both": "Behold begge",
+      "replace": "Erstatt"
+    },
+    "upload": {
+      "modal": {
+        "title": "Velg en mappe å laste opp",
+        "upload_to": "Last opp til",
+        "all": "Rot",
+        "create_folder": "Opprett ny mappe",
+        "cancel": "Avbryt",
+        "file_upload": "Last opp"
+      }
     }
   },
   "frame": {
@@ -4453,12 +4483,8 @@
     "default-text": {
       "social-media": {
         "reddit": "Sjekk ut denne fantastiske AI-agenten [{{promptName}}]",
-        "linkedin": "Legg merke til alle AI entusiaster og fagfolk som søker økt produktivitet! Jeg kom over en AI Agent plattform som tilbyr banebrytende løsninger for å forenkle komplekse oppgaver og integrere med deres interne verktøy. Jeg var personlig utprøvd [{{promptName}}] og fikk blåst bort fra dens skapninger. Det er en spill-forvandler for alle som ser etter å være foran kurven. Sjekk ut for deg selv hos {{promptLink}} , og gi meg beskjed om hva du tenker!",
-        "facebook": "Legg merke til alle AI entusiaster og fagfolk som søker økt produktivitet! Jeg kom over en AI Agent plattform som tilbyr banebrytende løsninger for å forenkle komplekse oppgaver og integrere med deres interne verktøy. Jeg var personlig utprøvd [{{promptName}}] og fikk blåst bort fra dens skapninger. Det er en spill-forvandler for alle som ser etter å være foran kurven. Sjekk ut for deg selv hos {{promptLink}} , og gi meg beskjed om hva du tenker!",
-        "whatsapp": "Jeg kom over en AI Agent plattform som tilbyr banebrytende løsninger for å forenkle komplekse oppgaver og integrere med deres interne verktøy. Jeg var personlig utprøvd [{{promptName}}] og fikk blåst bort fra dens skapninger. Det er en spill-forvandler for alle som ser etter å være foran kurven. Sjekk ut for deg selv hos {{promptLink}} , og gi meg beskjed om hva du tenker!",
         "hackernews": "Forenkle arbeidsmengde med [{{promptName}}] - AI-agenten gjør jobben ferdig"
-      },
-      "contribute": "Jeg kom over en AI Agent plattform som tilbyr banebrytende løsninger for å forenkle komplekse oppgaver og integrere med deres interne verktøy. Jeg var personlig utprøvd [{{promptName}}] og fikk blåst bort fra dens skapninger. Det er en spill-forvandler for alle som ser etter å være foran kurven. Sjekk ut for deg selv hos {{promptLink}} , og gi meg beskjed om hva du tenker!"
+      }
     },
     "button": {
       "share_contribute": "Kopier og Del",
