--- a/apps/builder/src/i18n/locale/en-US.json
+++ b/apps/builder/src/i18n/locale/en-US.json
@@ -3766,6 +3766,9 @@
         "create_folder": "Create new folder",
         "cancel": "Cancel",
         "file_upload": "Upload"
+      },
+      "select": {
+        "confirm_button": "Select"
       }
     }
   },
